@@ -1,10 +1,15 @@
 plugins {
     id("java")
     id("application")
+    id("org.openjfx.javafxplugin") version "0.1.0"
 }
 
 group = "com.AdvaitPalve"
 version = "1.0-SNAPSHOT"
+
+repositories {
+    mavenCentral()
+}
 
 java {
     toolchain {
@@ -16,34 +21,21 @@ application {
     mainClass.set("com.jojo.player.Main")
 }
 
-repositories {
-    mavenCentral()
+javafx {
+    version = "21.0.2"
+    modules = listOf(
+        "javafx.controls",
+        "javafx.fxml",
+        "javafx.media"
+    )
 }
-
-val javafxSdkRoot = "C:/javafx-sdk-21.0.2"
 
 dependencies {
     testImplementation(platform("org.junit:junit-bom:6.0.0"))
     testImplementation("org.junit.jupiter:junit-jupiter")
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
-    implementation(fileTree("$javafxSdkRoot/lib") {
-        include("*.jar")
-    })
-
 }
 
 tasks.test {
     useJUnitPlatform()
-}
-
-application {
-    applicationDefaultJvmArgs = listOf(
-        "--module-path", "$javafxSdkRoot/lib",
-        "--add-modules", "javafx.controls,javafx.media",
-        "-Djava.library.path=$javafxSdkRoot/bin"
-    )
-}
-
-tasks.withType<JavaCompile>().configureEach {
-    options.release.set(21)
 }
